--- a/style.css
+++ b/style.css
@@ -2,12 +2,15 @@ html {
   box-sizing: border-box;
 }
 
+body {
+  background-image: linear-gradient(to bottom, #615dad, #ffc8da);
+  background-repeat: no-repeat;
+}
+
 .stranka {
   display: flex;
   margin: 0;
   padding: 0;
-  background-image: linear-gradient(to bottom, #615dad, #ffc8da);
-  background-repeat: no-repeat;
   justify-content: center;
 }
 
@@ -19,9 +22,6 @@ html {
   background-color: #283e50;
   border-radius: 10px 10px 0px 0px;
   margin: 70px;
-}
-
-.obrazek {
 }
 
 img {
@@ -62,6 +62,7 @@ p {
   background-color: teal;
   flex-direction: column;
 }
+
 .tlacitka a {
   color: white;
   text-align: center;
@@ -71,6 +72,7 @@ p {
 .pravidla:hover {
   background-color: #1cbb96;
 }
+
 .zacit:hover {
   background-color: #0090e9;
 }
@@ -80,6 +82,7 @@ p {
   background-color: #1fcca4;
   border-bottom: #283e50 solid 1px;
 }
+
 .zacit {
   padding: 15px;
   background-color: #0197f6;
