--- a/style.css
+++ b/style.css
@@ -4,29 +4,30 @@ html {
 
 body {
   background-image: linear-gradient(to bottom, #615dad, #ffc8da);
+  font-family: Arial, Helvetica, sans-serif;
   background-repeat: no-repeat;
-}
-
-.stranka {
-  display: flex;
-  margin: 0;
-  padding: 0;
-  justify-content: center;
+  min-height: 100vh;
 }
 
 .vizual {
   display: flex;
   flex-direction: column;
-  max-width: 30%;
-  max-height: 77%;
+  justify-content: center;
+  color: white;
+  font-size: 1em;
+  line-height: 1.4;
+  width: 40vw;
+  max-width: 100vh;
+  min-width: 45vw;
   background-color: #283e50;
   border-radius: 10px 10px 0px 0px;
-  margin: 70px;
+  margin: 3rem auto 3rem auto;
+  padding: 0;
 }
 
 img {
   width: 100%;
-  height: 100%;
+  height: auto;
   border-radius: 10px 10px 0px 0px;
 }
 
@@ -39,25 +40,19 @@ img {
 
 h1 {
   font-family: 'Lobster', cursive;
-  font-size: 40px;
-  color: white;
+  font-size: 3em;
   text-align: center;
   margin-top: 25px;
   margin-bottom: 25px;
 }
 
 p {
-  font-family: Arial, Helvetica, sans-serif;
-  color: white;
-  font-size: 17px;
-  line-height: 1.4;
   padding: 15px 15px 30px 15px;
   margin: 0;
   text-align: center;
 }
 
 .tlacitka {
-  font-family: Arial, Helvetica, sans-serif;
   display: flex;
   background-color: teal;
   flex-direction: column;
@@ -86,4 +81,46 @@ p {
 .zacit {
   padding: 15px;
   background-color: #0197f6;
+}
+
+/* --------------------------------------------------Pravidla----- */
+
+ol {
+  padding: 20px;
+  margin: 0px 30px 0px 30px;
+}
+li {
+  padding: 0.5em;
+}
+.cross,
+.circle {
+  width: 1em;
+  height: 1em;
+  margin-left: 0.2em;
+  filter: invert(100%);
+}
+.circle:hover,
+.cross:hover {
+  filter: invert(0%);
+}
+
+.pole {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: 20px;
+  padding: 0;
+}
+
+.pole__img {
+  border-radius: 0%;
+  max-width: 25vh;
+  max-height: 25vh;
+}
+
+figcaption {
+  font-size: 0.7em;
+  font-style: italic;
+  max-width: 25vh;
+  max-height: 25vh;
 }
