--- a/style.css
+++ b/style.css
@@ -113,3 +113,36 @@ figcaption {
   font-size: 0.8em;
   font-style: italic;
 }
+
+@media (min-width: 540px) {
+  .vizual {
+    width: 80vw;
+    max-width: 60vw;
+    min-width: 300px;
+  }
+  ol {
+    margin: 0px 20px 0px 20px;
+  }
+}
+
+@media (min-width: 960px) {
+  .vizual {
+    width: 80vw;
+    max-width: 60vw;
+    min-width: 300px;
+  }
+  ol {
+    padding: 40px;
+    margin: 0px 30px 0px 30px;
+  }
+}
+@media (max-width: 540px) {
+  .vizual {
+    width: 80vw;
+    max-width: 60vw;
+    min-width: 300px;
+  }
+  .pole {
+    width: 70%;
+  }
+}
