--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
 
 h1 {
   font-family: 'Lobster', cursive;
-  font-size: 2em;
+  font-size: 3em;
   text-align: center;
   margin-top: 25px;
   margin-bottom: 25px;
@@ -46,6 +46,16 @@ p {
   padding: 15px 15px 30px 15px;
   margin: 0;
   text-align: center;
+}
+.ikon {
+  width: 1em;
+  height: 1em;
+  line-height: 1.4;
+  padding-left: 0.2em;
+  filter: invert(100%);
+}
+.ikon:hover {
+  filter: invert(0%);
 }
 
 .tlacitka {
@@ -58,6 +68,7 @@ p {
   color: white;
   text-align: center;
   text-decoration: none;
+  font-size: 1.3em;
 }
 
 .pravidla:hover {
