--- a/style.css
+++ b/style.css
@@ -157,3 +157,87 @@ figcaption {
     width: 70%;
   }
 }
+/* --------------------------------------------------Hra----- */
+/* .vizual_kontejner {
+  max-width: 80vmin;
+  min-width: 300px;
+  border-radius: 10px 10px 0px 0px;
+  margin: 3em auto;
+  min-height: 100vh;
+  background-color: rgb(87, 71, 68);
+  justify-content: center;
+  margin: auto;
+} */
+
+.kontejner_ikon {
+  display: flex;
+  align-items: center;
+  padding: 0;
+}
+.prave_ikon {
+  flex-grow: 1;
+  text-align: right;
+}
+.leve_ikon {
+  display: flex;
+  align-items: center;
+}
+.leve_ikon img {
+  filter: invert(100%);
+  padding-left: 0.5rem;
+  padding-bottom: 0.2rem;
+  width: 1rem;
+  height: auto;
+}
+
+.ikon_home {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 5px;
+  background-color: #1fcca4;
+  padding: 0.5rem 0.5rem;
+}
+.ikon_restart {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 5px;
+  background-color: #0197f6;
+  padding: 0.5rem 0.5rem;
+}
+
+.ikon_home:hover,
+.ikon_home:focus {
+  background-color: #289e82;
+}
+.ikon_restart:hover,
+.ikon_restart:focus {
+  background-color: #2173a7;
+}
+
+.hraci_pole button {
+  height: 2.8rem;
+  width: 2.8rem;
+  border: gray 1px solid;
+  background-color: #615dad;
+  float: left;
+  padding: 0;
+}
+button:hover,
+button:focus {
+  background-color: #3e39a0;
+  border: gray 1px solid;
+  margin: 0;
+  padding: 0;
+}
+@media (max-width: 750px) {
+  .hraci_pole button {
+    height: 2.2rem;
+    width: 2.2rem;
+  }
+}
+@media (max-width: 590px) {
+  .hraci_pole button {
+    height: 1.8rem;
+    width: 1.8rem;
+  }
+}
