--- a/style.css
+++ b/style.css
@@ -173,6 +173,7 @@ figcaption {
   display: flex;
   align-items: center;
   padding: 0;
+  margin-bottom: 1rem;
 }
 .prave_ikon {
   flex-grow: 1;
@@ -234,10 +235,34 @@ button:focus {
     height: 2.2rem;
     width: 2.2rem;
   }
+  .leve_ikon img {
+    width: 2rem;
+    height: auto;
+  }
+  .ikon_home {
+    width: 2rem;
+    height: 2rem;
+  }
+  .ikon_restart {
+    width: 2rem;
+    height: 2rem;
+  }
 }
 @media (max-width: 590px) {
   .hraci_pole button {
     height: 1.8rem;
     width: 1.8rem;
+  }
+  .leve_ikon img {
+    width: 2rem;
+    height: auto;
+  }
+  .ikon_home {
+    width: 2rem;
+    height: 2rem;
+  }
+  .ikon_restart {
+    width: 2rem;
+    height: 2rem;
   }
 }
