--- a/style.css
+++ b/style.css
@@ -208,28 +208,32 @@ figcaption {
 
 .ikon_home:hover,
 .ikon_home:focus {
-  background-color: #289e82;
+  filter: brightness(80%);
 }
 .ikon_restart:hover,
 .ikon_restart:focus {
-  background-color: #2173a7;
+  filter: brightness(80%);
 }
 
 .hraci_pole button {
   height: 2.8rem;
   width: 2.8rem;
-  border: gray 1px solid;
-  background-color: #615dad;
+  border: rgb(40, 62, 80) 1px solid;
+  background-color: rgb(193, 180, 215);
   float: left;
   padding: 0;
 }
-button:hover,
-button:focus {
-  background-color: #3e39a0;
-  border: gray 1px solid;
+.hraci_pole button:hover {
+  filter: brightness(80%);
+  border: rgb(40, 62, 80) 1px solid;
   margin: 0;
   padding: 0;
 }
+.hraci_pole button:focus {
+  outline: none;
+  box-shadow: none;
+}
+
 .bez-pozadi {
   background-color: transparent;
 }
