--- a/style.css
+++ b/style.css
@@ -158,21 +158,10 @@ figcaption {
   }
 }
 /* --------------------------------------------------Hra----- */
-/* .vizual_kontejner {
-  max-width: 80vmin;
-  min-width: 300px;
-  border-radius: 10px 10px 0px 0px;
-  margin: 3em auto;
-  min-height: 100vh;
-  background-color: rgb(87, 71, 68);
-  justify-content: center;
-  margin: auto;
-} */
 
 .kontejner_ikon {
   display: flex;
   align-items: center;
-  padding: 0;
   margin-bottom: 1rem;
 }
 .prave_ikon {
@@ -188,22 +177,20 @@ figcaption {
   padding-left: 0.5rem;
   padding-bottom: 0.2rem;
   width: 1rem;
-  height: auto;
+  height: 1rem;
+}
+.prave_ikon img {
+  width: 1rem;
+  height: 1rem;
+  border-radius: 5px;
+  padding: 0.5rem 0.5rem;
 }
 
 .ikon_home {
-  width: 1rem;
-  height: 1rem;
-  border-radius: 5px;
   background-color: #1fcca4;
-  padding: 0.5rem 0.5rem;
 }
 .ikon_restart {
-  width: 1rem;
-  height: 1rem;
-  border-radius: 5px;
   background-color: #0197f6;
-  padding: 0.5rem 0.5rem;
 }
 
 .ikon_home:hover,
@@ -225,9 +212,6 @@ figcaption {
 }
 .hraci_pole button:hover {
   filter: brightness(80%);
-  border: rgb(40, 62, 80) 1px solid;
-  margin: 0;
-  padding: 0;
 }
 .hraci_pole button:focus {
   outline: none;
@@ -242,15 +226,7 @@ figcaption {
     height: 2.2rem;
     width: 2.2rem;
   }
-  .leve_ikon img {
-    width: 2rem;
-    height: auto;
-  }
-  .ikon_home {
-    width: 2rem;
-    height: 2rem;
-  }
-  .ikon_restart {
+  .kontejner_ikon img {
     width: 2rem;
     height: 2rem;
   }
@@ -260,15 +236,7 @@ figcaption {
     height: 1.8rem;
     width: 1.8rem;
   }
-  .leve_ikon img {
-    width: 2rem;
-    height: auto;
-  }
-  .ikon_home {
-    width: 2rem;
-    height: 2rem;
-  }
-  .ikon_restart {
+  .kontejner_ikon img {
     width: 2rem;
     height: 2rem;
   }
