--- a/style.css
+++ b/style.css
@@ -242,3 +242,23 @@ figcaption {
     height: 2rem;
   }
 }
+
+.ikon_c {
+  background-image: url('podklady/cast2/podklady/circle.svg');
+  background-repeat: no-repeat;
+  height: 2.8rem;
+  width: 2.8rem;
+}
+
+.ikon_s {
+  background-image: url('podklady/cast2/podklady/cross.svg');
+  background-repeat: no-repeat;
+  height: 2.8rem;
+  width: 2.8rem;
+  padding: 0;
+  margin: 0;
+}
+
+.play {
+  background-image: url('podklady/cast2/podklady/circle.svg');
+}
