--- a/style.css
+++ b/style.css
@@ -165,6 +165,10 @@ figcaption {
   align-items: center;
   margin-bottom: 1rem;
 }
+.leve_text {
+  color: white;
+}
+
 .prave_ikon {
   flex-grow: 1;
   text-align: right;
@@ -214,6 +218,7 @@ figcaption {
 }
 .hraci_pole button:hover {
   filter: brightness(80%);
+  transition: opacity 1s ease-in-out 2s;
 }
 .hraci_pole button:focus {
   outline: none;
